--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -33,5 +33,5 @@
 {% endblock body %}
 
 {% block columnRight %}
-    {{ render(controller('App\\Application\\Controller\\BlogController::filters')) }}
+    {{ render(controller('App\\Post\\Ui\\Controller\\BlogController::filters')) }}
 {% endblock columnRight %}
