--- a/templates/default/article.html.twig
+++ b/templates/default/article.html.twig
@@ -2,13 +2,13 @@
     <article id="blog-last-article-block" class="blog-article">
         <h3>
             <a href="{{ path('blog_show', { 'slug': lastBlogArticle.slug }) }}"
-               title="Voir l'article : {{ lastBlogArticle.title }}">{{ lastBlogArticle.title }}</a>
+               title="Voir l'article : {{ lastBlogArticle.content.title }}">{{ lastBlogArticle.content.title }}</a>
 
         </h3>
 
         <div class="publi-info">
 		<span>Publié le
-			<span class="date-article-block">le {% if lastBlogArticle.created %}{{ lastBlogArticle.created|date('d/m/Y à H:i') }}{% endif %}</span>
+			<span class="date-article-block">le {% if lastBlogArticle.createdAt %}{{ lastBlogArticle.createdAt|date('d/m/Y à H:i') }}{% endif %}</span>
             {% if lastBlogArticle.category %}
                 dans <a href="{{ path('blog',{'category' : lastBlogArticle.category.systemName}) }}"
                         title="{{ lastBlogArticle.category.name }}">{{ lastBlogArticle.category.name }}</a>
@@ -20,18 +20,18 @@
             <div class="blog-visuel">
                 <a rel="prettyPhoto" href="{{ asset(lastBlogArticle.logo.webpath) | imagine_filter('modal_img') }}">
                     <img width="425" class="imagecache imagecache-blog_list"
-                         title="{{ lastBlogArticle.title }}"
+                         title="{{ lastBlogArticle.content.title }}"
                          src="{{ lastBlogArticle.logo.webpath | imagine_filter('blog_list') }}"
-                         alt="{{ lastBlogArticle.title }}"/>
+                         alt="{{ lastBlogArticle.content.title }}"/>
                 </a>
             </div>
         {% endif %}
 
         <p class="container-wysiwyg">
-            {{ lastBlogArticle.body|wordWarp }}
+            {{ lastBlogArticle.content.body|wordWarp }}
 
             <a href="{{ path('blog_show', { 'slug': lastBlogArticle.slug }) }}"
-               title="Lire l'article : {{ lastBlogArticle.title }}">Lire la suite</a>
+               title="Lire l'article : {{ lastBlogArticle.content.title }}">Lire la suite</a>
         </p>
 
         {% if lastBlogArticle.tags is not empty %}
