Github: configure CI with github actions

--- a/assets/css/members-area.sass
+++ b/assets/css/members-area.sass
@@ -2,5 +2,6 @@
 @import "bootstrap"
 
 @import "~bootstrap/scss/bootstrap"
-@import "~mdbootstrap/scss/mdb-free"
+//@import "~mdbootstrap/scss/mdb-free"
+@import "~mdbootstrap/css/mdb.lite.min.css"
 
