--- a/assets/css/_variables.sass
+++ b/assets/css/_variables.sass
@@ -5,7 +5,7 @@
 //
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/"
 
-$aml-css-images: "assets/images"
+$aml-css-images: "../../images"
 //
 //// set if you're also including font-awesome
 //$fa-font-path: "~font-awesome/fonts"
