--- a/templates/members/members_layout.html.twig
+++ b/templates/members/members_layout.html.twig
@@ -70,10 +70,10 @@
 
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('fos_user_profile_show') }}">Vérifier mes informations</a>
+                        <a class="nav-link" href="#">Vérifier mes informations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">Mettre à jour mes
+                        <a class="nav-link" href="#">Mettre à jour mes
                             informations</a>
                     </li>
                 </ul>
