--- a/templates/form/aml_theme.html.twig
+++ b/templates/form/aml_theme.html.twig
@@ -76,7 +76,7 @@
                 {% for error in errors %}
                     {{ error.messagePluralization is null
                     ? error.messageTemplate|trans(error.messageParameters, 'validators')
-                    : error.messageTemplate|transchoice(error.messagePluralization, error.messageParameters, 'validators') }}
+                    : error.messageTemplate|trans(error.messagePluralization, error.messageParameters, 'validators') }}
                     <br/>
                 {% endfor %}
             </div>
