--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -25,13 +25,14 @@
         {% endif %}
 
 
-        <form method="post">
+        <form action="{{ path('app_members_area_login') }}"  method="post">
 
             <label for="inputUsername" class="visually-hidden">Login</label>
-            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Login" required autofocus>
+            <input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" placeholder="Login" required autofocus>
             <label for="inputPassword" class="visually-hidden">Mot de passe</label>
-            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+            <input type="password" name="_password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
 
+            <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}"/>
             <input type="hidden" name="_csrf_token"
                        value="{{ csrf_token('authenticate') }}"
                 >
