--- a/templates/agenda/blocs/bloc_seasons.html.twig
+++ b/templates/agenda/blocs/bloc_seasons.html.twig
@@ -4,7 +4,7 @@
         {% for key,season in seasons %}
             {% if season.nb_events > 0 %}
                 <li>
-                    <a href="{{ path('agenda_archives', { 'season_id': season.id }) }}">
+                    <a href="{{ path('agenda_archives', { 'seasonId': season.id }) }}">
                         {{ season.name }} ({{ season.nb_events }})</a>
                 </li>
             {% endif %}
